# slam-dataset-generation

./: .gitignore  .gitmodules  README.md  makefile  simulate
lib/helper/: path.cpp  path.h  vec2d.h  world.cpp  world.h
lib/misc/: demangle_type.cpp  demangle_type.h  find_roots.cpp  line.cpp  line.h  linesegment.cpp  linesegment.h  misc.h  observationpath.cpp  observationpath.h  ray.cpp  ray.h  vec.cpp  vec.h
lib/structs/: edge.cpp  edge.h  graph.cpp  graph.h  path.cpp  path.h  splinepath.cpp  splinepath.h  trajectory.h  vec.cpp  vec.h  vec2d.cpp  vec2d.h  world.cpp  world.h
lib/util/: generate_critical_points.cpp  generate_trajectory.cpp  generate_world.cpp  simulate_trajectory.cpp  travelling_salesman.cpp
lib/world/: bezieredge.cpp  bezieredge.h  cubicbezieredge.cpp  edge.cpp  edge.h  linearedge.cpp  linearedge.h  parsingcontext.cpp  parsingcontext.h  path.cpp  path.h  world.cpp  world.h
src/common_src/edge/: cubicbezieredge.cpp  cubicbezieredge.h  edge.cpp  edge.h  linearedge.cpp  linearedge.h
src/common_src/misc/: cubicpolynomial.h  misc.cpp  misc.h  pose.cpp  pose.h
src/common_src/observationpath/: line.cpp
src/common_src/pathfinding/: find_critical_poses.cpp  find_critical_poses.h  find_trajectory.cpp  find_trajectory.h  motionvalidator.cpp  motionvalidator.h  statevaliditychecker.cpp  statevaliditychecker.h  trajectory.h
src/common_src/simulation/: robot.cpp  robot.h  splinepath.cpp  trajectory.cpp
src/common_src/trajectory/: hermiteedge.cpp  hermiteedge.h  hermitepath.cpp  hermitepath.h  trajectory.cpp  trajectory.h
src/common_src/world/: edgepath.cpp  edgepath.h  generate_world.cpp  parsingcontext.cpp  parsingcontext.h  world.cpp  world.h
src/executables/test-app/: main.cpp
src/executables/test-roots-app/: main.cpp
src/generate_random_bag/: main.cpp
src/helper/edges/: cubicbezieredge.cpp  cubicbezieredge.h  edge.cpp  edge.h  linearedge.cpp  linearedge.h
src/helper/misc/: find_roots.h
src/helper/simulation/: trajectory.cpp  trajectory.h
src/helper/world/: path.h  (+1 more)
src/simulate/: critical_points.cpp  main.cpp  simulate.cpp  trajectory.cpp
src/slam-dataset-generation/: CMakeLists.txt  package.xml
src/slam-dataset-generation/launch/: test_app.launch
src/slam-dataset-generation/lib/libsimulator/edge/non_observable/: HermiteEdge.cpp  HermiteEdge.h
src/slam-dataset-generation/lib/libsimulator/edge/observable/: CubicBezierEdge.cpp  CubicBezierEdge.h  Edge.cpp  Edge.h  LinearEdge.cpp  LinearEdge.h  ObstacleEdge.cpp  ObstacleEdge.h
src/slam-dataset-generation/lib/libsimulator/math/: CubicSplineEdge.h  Polynomial.h  PolynomialEdge.h  Pose.cpp  Pose.h  RootFinder.cpp  RootFinder.h  Spline.h  UnitParametricEdge.h  Vec.cpp  Vec.h  find_roots.cpp  find_roots.h  root_finder.cpp  root_finder.h
src/slam-dataset-generation/lib/libsimulator/misc/: cubicpolynomial.h  misc.h
src/slam-dataset-generation/lib/libsimulator/observationpath/: Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  ObservationPath.cpp  ObservationPath.h  Ray.cpp  Ray.h  line.h  linesegment.cpp  ray.cpp
src/slam-dataset-generation/lib/libsimulator/obstacle/: CubicBezierEdge.cpp  CubicBezierEdge.h  EdgePath.cpp  EdgePath.h  LinearEdge.cpp  LinearEdge.h  Obstacle.cpp  Obstacle.h  ObstacleEdge.cpp  ObstacleEdge.h
src/slam-dataset-generation/lib/libsimulator/path/non_observable/: HermitePath.cpp  HermitePath.h  Trajectory.cpp  Trajectory.h
src/slam-dataset-generation/lib/libsimulator/path/observable/: EdgePath.cpp  EdgePath.h
src/slam-dataset-generation/lib/libsimulator/pathfinding/: MotionValidator.cpp  MotionValidator.h  StateValidityChecker.cpp  StateValidityChecker.h  find_critical_poses.cpp  find_trajectory.cpp  find_trajectory.h  motionvalidator.h  statevaliditychecker.h
src/slam-dataset-generation/lib/libsimulator/simulation/: Robot.cpp  Robot.h  robot.h
src/slam-dataset-generation/lib/libsimulator/trajectory/: HermiteEdge.cpp  HermiteEdge.h  HermitePath.cpp  HermitePath.h  Trajectory.cpp  Trajectory.h
src/slam-dataset-generation/lib/libsimulator/world/: World.cpp  World.h  world.cpp  world.h
src/slam-dataset-generation/lib/libsimulator/world/parsing/: AttributeTraversalPolicy.h  LengthFactory.h  SvgParser.cpp  SvgParser.h  SvgParser_parse.cpp  SvgTransformHandler.cpp  SvgTransformHandler.h  SvgppForwardDeclarations.h
src/slam-dataset-generation/src/draw_world/: draw_world.cpp  draw_world.h  main.cpp
src/slam-dataset-generation/src/edge/: edge.h
src/slam-dataset-generation/src/math/: cubicpolynomial.h  function.h  polynomial.cpp  polynomial.h  polynomial_implementation.h  root_finder.cpp  spline.h
src/slam-dataset-generation/src/misc/: cubicsplineedge.h  find_roots.cpp  misc.cpp  misc.h  vec.cpp  vec.h
src/slam-dataset-generation/src/nodes/app/: main.cpp
src/slam-dataset-generation/src/nodes/draw_world/: draw_world.cpp  main.cpp
src/slam-dataset-generation/src/nodes/simulate_world/: main.cpp
src/slam-dataset-generation/src/nodes/test-app/: main.cpp
src/slam-dataset-generation/src/nodes/test_app/: main.cpp
src/slam-dataset-generation/src/nodes/test_roots/: test_roots.cpp
src/slam-dataset-generation/src/observationpath/: linesegment.h  observationpath.cpp  ray.h
src/slam-dataset-generation/src/pathfinding/: find_trajectory.cpp  find_trajectory.h  motionvalidator.cpp  statevaliditychecker.cpp
src/slam-dataset-generation/src/simulate_world/: main.cpp
src/slam-dataset-generation/src/simulation/: robot.cpp  robot.h
src/slam-dataset-generation/src/test_app/: main.cpp
src/slam-dataset-generation/src/test_roots/: main.cpp  test_roots.cpp  test_roots.h
src/slam-dataset-generation/src/trajectory/: hermiteedge.cpp  hermiteedge.h  hermitepath.h  trajectory.cpp
src/slam-dataset-generation/src/world/: edgepath.h  world.cpp  world.h
src/slam-dataset-generation/src/world/parsing/: AttributeTraversalPolicy.h  LengthFactory.cpp  LengthFactory.h  SvgParser.cpp  SvgParser.h  SvgTransformHandler.cpp  SvgTransformHandler.h  attribute_traversal.h  lengthfactory.cpp  lengthfactory.h  parsingcontext.cpp  parsingcontext.h
src/test-app/: main.cpp
(+8 files in other folders)
